# bridge

./: Dockerfile  README.md  bcb-table-manager-protocol.md  bridge.sh  docker-test.sh  environment.yml  evaluate-hands.py  generate-hands.py  pyproject.toml  random-hands.py  requirements.txt  test.sh  train.py
.github/workflows/: ci.yml
data/tatsu-lab/alpaca/: train-alpaca.parquet
prompts/2025-12-25/: 0-latest-context.md  latest-context.md
prompts/2025-12-26/: 1-coverage-90%.md  2-stress-testing.md  working-pipeline.md
prompts/2025-12-27/: 0-containerized-build.md
prompts/2025-12-29/: 0-foundations.md
prompts/2025-12-30/: 0-bidding-integration.md
prompts/2025-12-31/: 0-no-ci-rebuild-for-docs.md
